--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,96 @@
-.App {
-  text-align: center;
+*{
+  box-sizing: border-box;
+}
+body{
+        background-color: #d2dbdc;
+        margin: 0;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.app-window{
+        display: flex;
+        height: 100vh;
+        background-color: #ededed;
+}
+.sidebar{
+        width: 35%;
+        max-width: 415px;
+        display: flex;
+        flex-direction: column;
+        border-right: 1px solid #ddd;
+
+}
+header{
+        padding: 0 15px;
+        height: 60px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+}
+.header-havatar{
+        width: 40px;
+        height: 40px;
+        border-radius: 20px;
+        cursor: pointer;
+}
+.header-buttons{
+        display: flex;
+}
+.header-btn{
+        width: 40px;
+        height: 40px;
+        border-radius: 20px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+}
+.search{
+        background-color: #f6f6f6;
+        border-bottom: 1px solid #eee;
+        padding: 5px 15px;
+
+}
+.search-imput{
+        background-color: #fff;
+        height: 40px;
+        border-radius: 20px;
+        display: flex;
+        align-items: center;
+        padding: 0 10px;
+
+}
+.search-imput input{
+        flex: 1;
+        border: 0;
+        outline: 0;
+        background-color: transparent;
+        margin-left: 10px;
+}
+.chatlist{
+        flex: 1;
+        background-color: #fff;
+        overflow-y: auto;
+}
+.chatlist::-webkit-scrollbar{
+        width: 6px;
+        height: 6px;
+}
+.chatlist::-webkit-scrollbar-thumb{
+        background-color: rgba(0,0,0,0.2);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+
+
+
+
+.content-area{
+       
+        flex: 1;
+
+
 }
